--- a/packages/element/src/app/drayman-element.component.html
+++ b/packages/element/src/app/drayman-element.component.html
@@ -15,87 +15,92 @@
             <ng-container [ngSwitch]="element.type">
                 <!--ELEMENTS-START-->
 <ng-container *ngSwitchCase="'h1'">
-<h1 [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" >
+<h1 [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
 <ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
 </h1>
 </ng-container>
 <ng-container *ngSwitchCase="'h2'">
-<h2 [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" >
+<h2 [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
 <ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
 </h2>
 </ng-container>
 <ng-container *ngSwitchCase="'h3'">
-<h3 [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" >
+<h3 [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
 <ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
 </h3>
 </ng-container>
 <ng-container *ngSwitchCase="'h4'">
-<h4 [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" >
+<h4 [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
 <ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
 </h4>
 </ng-container>
 <ng-container *ngSwitchCase="'h5'">
-<h5 [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" >
+<h5 [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
 <ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
 </h5>
 </ng-container>
 <ng-container *ngSwitchCase="'h6'">
-<h6 [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" >
+<h6 [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
 <ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
 </h6>
 </ng-container>
 <ng-container *ngSwitchCase="'td'">
-<td [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" [attr.colspan]="element.options.colspan" [attr.rowspan]="element.options.rowspan">
+<td [attr.colspan]="element.options.colspan" [attr.rowspan]="element.options.rowspan" [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
 <ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
 </td>
 </ng-container>
-<ng-container *ngSwitchCase="'th'">
-<th [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" [attr.colspan]="element.options.colspan" [attr.rowspan]="element.options.rowspan">
-<ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
-</th>
-</ng-container>
-<ng-container *ngSwitchCase="'span'">
-<span [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" >
-<ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
-</span>
-</ng-container>
 <ng-container *ngSwitchCase="'div'">
-<div [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" >
+<div [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
 <ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
 </div>
 </ng-container>
+<ng-container *ngSwitchCase="'span'">
+<span [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
+<ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
+</span>
+</ng-container>
 <ng-container *ngSwitchCase="'table'">
-<table [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" >
+<table [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
 <ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
 </table>
 </ng-container>
 <ng-container *ngSwitchCase="'tbody'">
-<tbody [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" >
+<tbody [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
 <ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
 </tbody>
 </ng-container>
 <ng-container *ngSwitchCase="'thead'">
-<thead [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" >
+<thead [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
 <ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
 </thead>
 </ng-container>
 <ng-container *ngSwitchCase="'tfoot'">
-<tfoot [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" >
+<tfoot [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
 <ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
 </tfoot>
 </ng-container>
-<ng-container *ngSwitchCase="'button'">
-<button [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" (click)="element.options.onClick()" [disabled]="element.options.disabled">
+<ng-container *ngSwitchCase="'tr'">
+<tr [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
 <ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
-</button>
+</tr>
 </ng-container>
-<ng-container *ngSwitchCase="'img'">
-<img [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" [src]="element.options.src" [alt]="element.options.alt" />
+<ng-container *ngSwitchCase="'th'">
+<th [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
+<ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
+</th>
 </ng-container>
 <ng-container *ngSwitchCase="'input'">
-<app-drayman-input-field [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" [options]="element.options">
+<app-drayman-input-field [options]="element.options" [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
 <ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
 </app-drayman-input-field>
+</ng-container>
+<ng-container *ngSwitchCase="'img'">
+<img [src]="element.options.src" [alt]="element.options.alt" [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)" />
+</ng-container>
+<ng-container *ngSwitchCase="'button'">
+<button (click)="element.options.onClick()" [disabled]="element.options.disabled" [ngStyle]="element.style" [attr.tabindex]="element.options.tabindex" (keydown)="onShortcut($event, element)">
+<ng-container *ngTemplateOutlet="childrenTemplate; context: {children: element.children}"></ng-container>
+</button>
 </ng-container>
                 <!--ELEMENTS-END-->
                 <ng-container *ngSwitchCase="'text'">
