--- a/packages/element/src/app/modal/drayman-modal.component.html
+++ b/packages/element/src/app/modal/drayman-modal.component.html
@@ -1,3 +1,3 @@
 <app-drayman-element aria-label="Component modal" style="height: 80vh; width: 80vh;" [component]="component"
-    [options]="options" [config]="config">
+    [options]="options" [config]="config" [isModal]="true">
 </app-drayman-element>
