Callbacks inside Browser hooks.

--- a/packages/framework/app/public/styles.css
+++ b/packages/framework/app/public/styles.css
@@ -3,3 +3,12 @@
     width: 100px;
     height: 100px;
 }
+
+.modal {
+  display: none;
+  border: 1px solid black;
+}
+
+.modal.is-open {
+  display: block;
+}
