--- a/packages/elements/projects/table/src/app/table/table.component.html
+++ b/packages/elements/projects/table/src/app/table/table.component.html
@@ -14,8 +14,10 @@
           <mat-icon>clear</mat-icon>
         </button>
       </mat-form-field>
-      <drayman-button-internal [attr.aria-label]="button.options.label" *ngFor="let button of toolbarButtons"
-        [options]="button.options">
+      <drayman-button-internal [attr.aria-label]="button.options.label" *ngFor="let button of currentToolbarButtons"
+        [label]="button.options.label" [onClick]="button.options.onClick" [view]="button.options.view"
+        [icon]="button.options.icon" [tooltip]="button.options.tooltip" [disabled]="button.options.disabled"
+        [imgUrl]="button.options.imgUrl" [buttonStyle]="button.options.buttonStyle">
       </drayman-button-internal>
     </div>
     <div style="height: 5px;"></div>
@@ -51,32 +53,100 @@
           (click)="onTableCellClick(rowIndex, column.field)">
           <ng-container [ngSwitch]="grid[rowIndex][columnIndex]?.type">
             <ng-container *ngSwitchCase="'button'">
-              <drayman-button-internal [options]="grid[rowIndex][columnIndex].options"></drayman-button-internal>
+              <drayman-button-internal [label]="grid[rowIndex][columnIndex].options.label"
+                [onClick]="grid[rowIndex][columnIndex].options.onClick"
+                [view]="grid[rowIndex][columnIndex].options.view" [icon]="grid[rowIndex][columnIndex].options.icon"
+                [tooltip]="grid[rowIndex][columnIndex].options.tooltip"
+                [disabled]="grid[rowIndex][columnIndex].options.disabled"
+                [imgUrl]="grid[rowIndex][columnIndex].options.imgUrl"
+                [buttonStyle]="grid[rowIndex][columnIndex].options.grid[rowIndex][columnIndex]"
+                [options]="grid[rowIndex][columnIndex].options">
+              </drayman-button-internal>
             </ng-container>
             <ng-container *ngSwitchCase="'text-field'">
-              <drayman-text-field-internal [options]="grid[rowIndex][columnIndex].options">
+              <drayman-text-field-internal [appearance]="grid[rowIndex][columnIndex].options.appearance"
+                [onValueChange]="grid[rowIndex][columnIndex].options.onValueChange"
+                [onFocus]="grid[rowIndex][columnIndex].options.onFocus"
+                [value]="grid[rowIndex][columnIndex].options.value" [label]="grid[rowIndex][columnIndex].options.label"
+                [disabled]="grid[rowIndex][columnIndex].options.placeholder"
+                [helpText]="grid[rowIndex][columnIndex].options.helpText"
+                [error]="grid[rowIndex][columnIndex].options.error"
+                [updateOnBlur]="grid[rowIndex][columnIndex].options.updateOnBlur"
+                [suggestions]="grid[rowIndex][columnIndex].options.suggestions"
+                [suggestionsPanelWidth]="grid[rowIndex][columnIndex].options.suggestionsPanelWidth"
+                [mask]="grid[rowIndex][columnIndex].options.mask">
               </drayman-text-field-internal>
             </ng-container>
             <ng-container *ngSwitchCase="'number-field'">
-              <drayman-number-field-internal [options]="grid[rowIndex][columnIndex].options">
+              <drayman-number-field-internal [appearance]="grid[rowIndex][columnIndex].options.appearance"
+                [onValueChange]="grid[rowIndex][columnIndex].options.onValueChange"
+                [suggestions]="grid[rowIndex][columnIndex].options.suggestions"
+                [onFocus]="grid[rowIndex][columnIndex].options.onFocus"
+                [appearance]="grid[rowIndex][columnIndex].options.appearance"
+                [suggestionsPanelWidth]="grid[rowIndex][columnIndex].options.suggestionsPanelWidth"
+                [value]="grid[rowIndex][columnIndex].options.value" [label]="grid[rowIndex][columnIndex].options.label"
+                [disabled]="grid[rowIndex][columnIndex].options.disabled"
+                [placeholder]="grid[rowIndex][columnIndex].options.placeholder"
+                [helpText]="grid[rowIndex][columnIndex].options.helpText"
+                [error]="grid[rowIndex][columnIndex].options.error"
+                [updateOnBlur]="grid[rowIndex][columnIndex].options.updateOnBlur">
               </drayman-number-field-internal>
             </ng-container>
             <ng-container *ngSwitchCase="'select'">
-              <drayman-select-internal [options]="grid[rowIndex][columnIndex].options"></drayman-select-internal>
+              <drayman-select-internal [appearance]="grid[rowIndex][columnIndex].options.appearance"
+                [onValueChange]="grid[rowIndex][columnIndex].options.onValueChange"
+                [options]="grid[rowIndex][columnIndex].options.options"
+                [onSearchChange]="grid[rowIndex][columnIndex].options.onSearchChange"
+                [multiple]="grid[rowIndex][columnIndex].options.multiple"
+                [value]="grid[rowIndex][columnIndex].options.value" [label]="grid[rowIndex][columnIndex].options.label"
+                [disabled]="grid[rowIndex][columnIndex].options.disabled"
+                [placeholder]="grid[rowIndex][columnIndex].options.placeholder"
+                [helpText]="grid[rowIndex][columnIndex].options.helpText"
+                [error]="grid[rowIndex][columnIndex].options.error"
+                [updateOnBlur]="grid[rowIndex][columnIndex].options.updateOnBlur"></drayman-select-internal>
             </ng-container>
             <ng-container *ngSwitchCase="'file-uploader'">
-              <drayman-file-uploader-internal [options]="grid[rowIndex][columnIndex].options">
+              <drayman-file-uploader-internal [onUpload]="grid[rowIndex][columnIndex].options.onUpload"
+                [onRemoveUploaded]="grid[rowIndex][columnIndex].options.onRemoveUploaded"
+                [allowMultiple]="grid[rowIndex][columnIndex].options.allowMultiple"
+                [initialFiles]="grid[rowIndex][columnIndex].options.initialFiles">
               </drayman-file-uploader-internal>
             </ng-container>
             <ng-container *ngSwitchCase="'checkbox'">
-              <drayman-checkbox-internal [options]="grid[rowIndex][columnIndex].options"></drayman-checkbox-internal>
+              <drayman-checkbox-internal [onValueChange]="grid[rowIndex][columnIndex].options.onValueChange"
+                [value]="grid[rowIndex][columnIndex].options.value" [label]="grid[rowIndex][columnIndex].options.label"
+                [disabled]="grid[rowIndex][columnIndex].options.disabled"
+                [placeholder]="grid[rowIndex][columnIndex].options.placeholder"
+                [helpText]="grid[rowIndex][columnIndex].options.helpText"
+                [error]="grid[rowIndex][columnIndex].options.error"
+                [updateOnBlur]="grid[rowIndex][columnIndex].options.updateOnBlur">
+              </drayman-checkbox-internal>
             </ng-container>
             <ng-container *ngSwitchCase="'datepicker'">
-              <drayman-datepicker-internal [options]="grid[rowIndex][columnIndex].options">
+              <drayman-datepicker-internal [appearance]="grid[rowIndex][columnIndex].options.appearance"
+                [onValueChange]="grid[rowIndex][columnIndex].options.onValueChange"
+                [dateFormat]="grid[rowIndex][columnIndex].options.dateFormat"
+                [showTodayButton]="grid[rowIndex][columnIndex].options.showTodayButton"
+                [appearance]="grid[rowIndex][columnIndex].options.appearance"
+                [value]="grid[rowIndex][columnIndex].options.value" [label]="grid[rowIndex][columnIndex].options.label"
+                [disabled]="grid[rowIndex][columnIndex].options.disabled"
+                [placeholder]="grid[rowIndex][columnIndex].options.placeholder"
+                [helpText]="grid[rowIndex][columnIndex].options.helpText"
+                [error]="grid[rowIndex][columnIndex].options.error"
+                [updateOnBlur]="grid[rowIndex][columnIndex].options.updateOnBlur">
               </drayman-datepicker-internal>
             </ng-container>
             <ng-container *ngSwitchCase="'timepicker'">
-              <drayman-timepicker-internal [options]="grid[rowIndex][columnIndex].options">
+              <drayman-timepicker-internal [appearance]="grid[rowIndex][columnIndex].options.appearance"
+                [onValueChange]="grid[rowIndex][columnIndex].options.onValueChange"
+                [showNowButton]="grid[rowIndex][columnIndex].options.showNowButton"
+                [appearance]="grid[rowIndex][columnIndex].options.appearance"
+                [value]="grid[rowIndex][columnIndex].options.value" [label]="grid[rowIndex][columnIndex].options.label"
+                [disabled]="grid[rowIndex][columnIndex].options.disabled"
+                [placeholder]="grid[rowIndex][columnIndex].options.placeholder"
+                [helpText]="grid[rowIndex][columnIndex].options.helpText"
+                [error]="grid[rowIndex][columnIndex].options.error"
+                [updateOnBlur]="grid[rowIndex][columnIndex].options.updateOnBlur">
               </drayman-timepicker-internal>
             </ng-container>
             <ng-container *ngSwitchDefault>
