--- a/packages/elements/projects/table/src/app/table/table.component.html
+++ b/packages/elements/projects/table/src/app/table/table.component.html
@@ -59,7 +59,7 @@
                 [tooltip]="grid[rowIndex][columnIndex].options.tooltip"
                 [disabled]="grid[rowIndex][columnIndex].options.disabled"
                 [imgUrl]="grid[rowIndex][columnIndex].options.imgUrl"
-                [buttonStyle]="grid[rowIndex][columnIndex].options.grid[rowIndex][columnIndex]"
+                [buttonStyle]="grid[rowIndex][columnIndex].options.buttonStyle"
                 [options]="grid[rowIndex][columnIndex].options">
               </drayman-button-internal>
             </ng-container>
