Rework drayman initialization; add view update IDs.

--- a/packages/elements/projects/checkbox/src/app/checkbox/checkbox.component.html
+++ b/packages/elements/projects/checkbox/src/app/checkbox/checkbox.component.html
@@ -1,1 +1,1 @@
-<mat-checkbox (click)="$event.stopPropagation()" [formControl]="formControl">{{label}}</mat-checkbox>
+<mat-checkbox [id]="id" [formControl]="formControl">{{label}}</mat-checkbox>
